--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      p {
+        color: red;
+      }
+    </style>
   </head>
   <body>
-    <h1>Hello world</h1>
+    <h1>ข้อมูลขายสินค้า</h1>
+    <p>รายงานยอดขายสินค้าในแต่ละเดือน</p>
 
     <script src="app.js"></script>
   </body>
